--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 HTML | Css | Remix-icons | Swiper Js | GSAP (GreenSock Animation Platform) Animation 
 
 
-We’ll implement smooth animations and transitions with GSAP and add interactivity to our swiper slides using Swiper.js.       
+Implement smooth animations and transitions with GSAP and add interactivity to our swiper slides using Swiper.js.       
 
 
 Technologies used:
