--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="pricing">
                     <p> Color: </p>
-                    <span> Blood Orange </span>
+                    <span> Midnight Blue </span>
 
                     <h3>$1249.00</h3>
                     <div class="btn-block">
@@ -84,7 +84,7 @@
                 </div>
                 <div class="pricing">
                     <p> Color: </p>
-                    <span> Blood Orange </span>
+                    <span> Artistic Purple </span>
 
                     <h3>$1249.00</h3>
                     <div class="btn-block">
@@ -129,49 +129,85 @@
 
     <!-- GSAP - Animation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" ="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Intializing Swiper -->
+    <script>
+        var swiper = new Swiper('.swiper', {
+            loop: true,
+            spaceBetween: 0,
+            mousewheel: true,
+            speed: 1200,
+            effect: 'coverflow',
+            direction: 'vertical',
+            coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 10,
+                modifier: 1,
+                slideShadows: true,
+            },
+            thumbs: {
+                swiper: {
+                    el: ".swiper-thumbs",
+                    slidesPreView: 2,
+                    spaceBetween: 0,
+                }
+            },
+            on: {
+                slideChangeTransitionStart: function () {
+                    gsap.from(
+                        ".swiper-slide-active h2",
+                        { x: -200, opacity: 0, duration: 1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".info p, .info span",
+                        { y: 10, opacity: 0, stagger: 0.1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".pricing p, .pricing span, .pricing h3, .btn-block",
+                        { y: 10, opacity: 0, stagger: 0.1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".main-img",
+                        { y: 50, opacity: 0, duration: 1, delay: 1 }
+                    );
+
+                    gsap.from(
+                        ".swiper-thumbs",
+                        { y: 20, opacity: 0, delay: 0.5 }
+                    );
+                },
+            }
+        });
+
+        // On page reload
+        gsap.from(
+                        ".swiper-slide-active h2",
+                        { x: -200, opacity: 0, duration: 1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".info p, .info span",
+                        { y: 10, opacity: 0, stagger: 0.1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".pricing p, .pricing span, .pricing h3, .btn-block",
+                        { y: 10, opacity: 0, stagger: 0.1, delay: 0.5 }
+                    );
+
+                    gsap.from(
+                        ".main-img",
+                        { y: 100, opacity: 0, duration: 1, delay: 1 }
+                    );
+
+                    gsap.from(
+                        ".swiper-thumbs",
+                        { y: 20, opacity: 0, delay: 0.5 }
+                    );
+    </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Notes -->
-<!-- Usage : 
-
-                HTML | Css | Remix-icons | Swiper Js | GSAP (GreenSock Animation Platform) Animation 
-
-
-Implement smooth animations and transitions with GSAP and add interactivity to our swiper slides using Swiper.js.       
-
-
-Technologies used:
-
-    HTML
-    CSS (Custom styles, Poppins font, and Swiper integration)
-    JavaScript (GSAP for animations, Swiper for slide transitions)
-    Remix icons for icons
-    External CDN for Swiper.js and GSAP libraries
-
-Topics covered:
-
-    How to set up a Swiper-based layout
-    Adding GSAP animations to swiper transitions
-    Styling with custom fonts and CSS animations
-    Creating an engaging product display with interactive slides
-    Don’t forget to subscribe for more frontend design and development tutorials! 👍
-
-
-Tags: swiper.js, gsap animations, frontend development, swiper animation tutorial, swiper js tutorial, gsap tutorial, css animations, HTML swiper, ecommerce webpage design, responsive swiper, moncler theme, web development tutorial
-
- -->
